# emoji-oracle

./: .gitignore  LICENSE  README.md  app.py  future_vision_game.py  image_generator.py  pyproject.toml  requirements.txt
data/: emojis.json
static/css/: style.css
templates/: index.html
